- adding location viewer  - fix provider

--- a/res/layout/control_activity.xml
+++ b/res/layout/control_activity.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
         >
     <!--TODO make a nice layout-->
     <ToggleButton
             android:id="@+id/togglebutton"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textOn="@string/locator_is_on_toggle_text"
             android:textOff="@string/locator_is_off_toggle_text"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
             android:onClick="onToggleClicked"
             />
-</RelativeLayout >
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/locator_open_viewer_button_text"
+            android:onClick="viewLocations"
+            />
+</LinearLayout>
 
