--- a/res/layout/viewer_list_entry.xml
+++ b/res/layout/viewer_list_entry.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
         >
-
     <!--TODO make nice layout-->
-
     <TextView
             android:id="@+id/time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-    <TextView
-            android:id="@+id/provider"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -22,11 +14,19 @@
             android:id="@+id/latitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            />
+    <TextView
+            android:id="@+id/provider"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/time"
             />
     <TextView
             android:id="@+id/longitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/latitude"
+            android:layout_alignParentRight="true"
             />
-
-</LinearLayout>
+</RelativeLayout>
